--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 
+* {
+    box-sizing: border-box;
+}
+
 h1 {
     color: $red-color;
 }
@@ -11,3 +15,62 @@ h2 {
 .card-course-item {
     margin-top: 16px;
 }
+
+.container {
+    margin: 0 auto;
+}
+
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.card-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 4.5em; /* Approximate height for 3 lines (1.5em per line) */
+
+    /* Standard property (not yet widely supported) */
+    line-clamp: 3;
+    box-orient: vertical;
+}
+
+/* Căn giữa modal trên màn hình */
+.modal-dialog {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* Tùy chọn: Thêm margin để di chuyển modal lên/xuống hoặc sang trái/phải */
+    margin: 0 auto;
+    height: 100%;
+}
+
+.modal-content {
+    top: -20%;
+}
+
+.table thead th {
+    // text-align: center; /* Center-align headers */
+    vertical-align: middle; /* Vertically center content */
+}
+
+.table tbody td,
+.table tbody th {
+    // text-align: center; /* Center-align content */
+    vertical-align: middle; /* Vertically center content */
+}
+
+.checkbox-select-all-option {
+    width: auto;
+    margin: 0 16px;
+}
+
+// .form-check-input {
+//     position: absolute;
+//     // top: 2px;
+// }
