--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,17 +1,21 @@
-<div class="mt-4">
-    <div class="row">
+<div class='mt-4'>
+    <div class='row'>
 
         {{#each courses}}
-        <div class="col-sm-6 col-lg-4">
-            <div class="card card-course-item">
-                <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
-                <div class="card-body">
-                    <h5 class="card-title">{{this.name}}</h5>
-                    <p class="card-text">{{this.description}}</p>
-                    <a href="#" class="btn btn-primary">Mua khóa học</a>
+            <div class='col-sm-6 col-lg-4'>
+                <div class='card card-course-item'>
+                    <a href='/courses/{{this.slug}}'>
+                        <img class='card-img-top' src='{{this.image}}' alt='{{this.name}}' />
+                    </a>
+                    <div class='card-body'>
+                        <a href='/courses/{{this.slug}}'>
+                            <h5 class='card-name'>{{this.name}}</h5>
+                        </a>
+                        <p class='card-title'>{{this.description}}</p>
+                        <a href='#' class='btn btn-primary'>Mua khóa học</a>
+                    </div>
                 </div>
             </div>
-        </div>
         {{/each}}
 
     </div>
