--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,22 +1,54 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class='navbar navbar-expand-lg navbar-light bg-light'>
+    <div class='container'>
+        <a class='navbar-brand' href='/'>F8 education</a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-     
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
+        <div
+            class='collapse navbar-collapse'
+            id='navbarSupportedContent'
+        >
+            <ul class='navbar-nav ml-auto'>
+                <li class='nav-item dropdown'>
+                    <a
+                        class='nav-link dropdown-toggle'
+                        href='#'
+                        id='navbarDropdown'
+                        role='button'
+                        data-toggle='dropdown'
+                        aria-haspopup='true'
+                        aria-expanded='false'
+                    >
+                        <img
+                            src='https://scontent.fhan3-4.fna.fbcdn.net/v/t39.30808-6/352518552_816367560153042_520969311047154354_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=ORSax-nlmX0Q7kNvgFL2xkq&_nc_ht=scontent.fhan3-4.fna&oh=00_AYAIzs4ZyeTi_kwPW-2Mkx4BgCpJZ_2E7J3R4TKrGH6ubA&oe=66CAAB9D'
+                            alt=''
+                            class='user-avatar'
+                        />
+                        Bốp đẹp trai
+                    </a>
+                    <div
+                        class='dropdown-menu'
+                        aria-labelledby='navbarDropdown'
+                    >
+                        <a
+                            class='dropdown-item'
+                            href='/courses/create'
+                        >Đăng khóa học</a>
+                        {{! <div class='dropdown-divider'></div> }}
+                        <a
+                            class='dropdown-item'
+                            href='/me/stored/courses'
+                        >Khóa học của tôi</a>
+                        <a
+                            class='dropdown-item'
+                            href='/me/stored/news'
+                        >Bài viết của tôi</a>
+                        <div class='dropdown-divider'></div>
+                        <a
+                            class='dropdown-item'
+                            href='#'
+                        >Đăng xuất</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
